# pyhash

./: LICENSE  README.md  pyproject.toml  setup.py
benchmarks/: benchmark.py  performance_tests.py
examples/: custom_types.py
src/hash_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyhash/: __init__.py
src/pyhash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyhash/core/: __init__.py  hasher.py  registry.py
src/pyhash/extensions/: builtin.py  custom.py  serializers.py
tests/: quick_test.py  test_consistency.py  test_hasher.py  test_registry.py
